add: update get chat handler
